--- a/metodologia.html
+++ b/metodologia.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Metodologia</title>
+  <title>Portfólio - Metodologia</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
