--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h2 class="conteudo-principal-escrito-subtitulo">
           Aqui você vai inserir informações sobre a sua profissão, há quanto tempo trabalha e pq de ter escolhido essa profissão. Um breve resumo sobre você.
         </h2>
-        <button class="conteudo-principal-escrito-botao" ><a class="laranjinha" href="contato.html" target=”_blank”>Contatos</a></button>
+        <button class="conteudo-principal-escrito-botao" ><a class="laranjinha" href="contato.html">Contatos</a></button>
       </div>
       <img class="conteudo-principal-imagem"src="professora.jpg" alt="Professora Viviane">
     </section>
