--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <nav class="navbar">
         <a href="#home">Início</a>
         <a href="#about">Sobre mim</a>
-        <a href="#service">Metodologia</a>
-        <a href="#experience">Experiência</a>
+        <a href="#service">Espaço EBV</a>
+        <a href="#experience">Formação</a>
         <a href="#contact">Contato</a>
     </nav>
 
@@ -47,10 +47,6 @@
         <p class="info"> Este é o nosso espaço EBV - English by Vivi! </p>
 
         <a href="#about" class="btn">Sobre mim</a>
-    </div>
-
-    <div class="image">
-        <img class="imagem-1" src="images/home-img.png" alt="">
     </div>
 
 </section>
@@ -86,14 +82,14 @@
 
 <section class="service" id="service">
 
-<h1 class="heading"> <span> Metodologia</span></h1>
+<h1 class="heading"> <span> Espaço EBV</span></h1>
 
     <div class="box-container">
 
         <div class="box">
 
             <i class="fas fa-book"></i>
-            <h3> No EBV temos </h3>
+            <h3> No espaço EBV temos: </h3>
             <p> - Apostila grátis </p>
             <p> - Inglês de uma maneira dinâmica com séries e músicas </p>
             <p> - Teacher paciente para explicação </p>
